--- a/style.css
+++ b/style.css
@@ -22,112 +22,222 @@ body {
   overflow-x: hidden;
 }
 
-h1 {
-  font-size: 36px;
+button {
+    cursor: pointer;
+    border: none;
 }
 
-nav {
-  display: flex;
-  padding-top: 32px;
+.purple {
+    color: #6415ff;
+}
+
+.container {
+    padding: 96px 0;
 }
 
 .row {
-  width: 100%;
-  max-width: 1200px;
-  margin: 0;
+    width: 100%;
+    max-width: 1280px;
+    margin: 0 auto;
+    display: flex;
+}
+
+ /* NAV BAR */
+
+ nav {
+    display: flex;
+    padding-top: 32px;
 }
 
 .nav__row {
-  display: flex;
-  justify-content: space-around;
-}
-
-.nav__logo {
-  display: flex;
-  align-items: center;
-  margin: 8px 0;
-  padding-bottom: 4px;
-}
-
-.nav__logo--img {
-  width: 40px;
-  height: 40px;
-}
-
-.nav__logo--title {
-  font-size: 24px;
-  font-weight: 900;
-  margin-left: 12px;
-  letter-spacing: 0.6px;
-  padding-bottom: 2px;
+    display: flex;
+    justify-content: space-between;
 }
 
 .nav__links {
-  display: flex;
-  align-items: center;
-  padding-bottom: 2px;
+    display: flex;
+    align-items: center;
 }
 
 .nav__link {
-  font-size: 14px;
-  font-weight: 600;
-  padding-top: 4px;
-  letter-spacing: 0.35px;
-  border-bottom: 2px solid transparent;
-  position: relative;
-  transition: all 300ms;
+    margin: 0 24px;
 }
 
-.login {
-  margin-left: 48px;
+.nav__link {
+    font-size: 14px;
+    font-weight: 600;
+    padding-top: 4px;
+    letter-spacing: 0.35px; 
+    border-bottom: 2px solid transparent;
+    position: relative;
+    transition: all 300ms;
+}
+
+.nav__link:hover {
+    color: #6415ff;
 }
 
 .nav__link--primary {
-  margin: 0;
-  padding: 10px 32px;
-  margin-top: 2px;
-  border-radius: 9999px;
-  background: #6415ff;
-  color: #fff;
-  line-height: 1.5;
-  border: none;
-  width: auto;
-  transition: all 300ms;
+    margin: 0;
+    padding: 10px 32px;
+    margin-top: 2px;
+    border-radius: 100px;
+    background: #6415ff;
+    color: #fff;
+    line-height: 1.5;
+    border: none;
+    width: auto;
+    transition: all 300ms;
 }
 
-/* GET STARTED */
 
-.container {
-  padding: 96px 0;
+.nav__link--primary:hover {
+    background-color: rgba(80,17,204);
+}
+
+.login {
+    margin-left: 48px;
+}
+
+.nav__logo {
+    display: flex;
+    align-items: center;
+    margin: 8px 0;
+    padding-bottom: 4px;
+}
+
+.nav__logo--img {
+    width: 40px;
+    height: 40px;
+}
+
+.nav__logo--title {
+    font-size: 24px;
+    font-weight: 900;
+    margin-left: 12px;
+    letter-spacing: 0.6px;
+    padding-bottom: 2px;
+}
+
+/* HEADER */
+
+h1 {
+    font-size: 48px;
+    color: #1a202c;
+    line-height: 1.25;
+    text-align: start;
+}
+
+.header__description {
+    width: 40%;
+
 }
 
 .header__description--para {
-  font-size: 16px;
-  margin: 32px 0;
+    margin: 32px 0;
+    font-size: 18px;
 }
 
-.header__email--input {
-
+.header__email {
+    width: 100%;
+    border: none;
+    border-radius:30px;
 }
 
 .header__email--btn {
-  z-index: 2;
-  margin: 8px;
-  height: calc(100% - 16px);
-  border-radius: 500px;
-  width: 160px;
-  border: none;
-  background-color: #6415ff;
-  color: #fff;
-  font-weight: 700;
-  font-size: 16px;
-  transition: all 300ms;
+    margin: 0;
+    padding: 10px 32px;
+    margin-top: 2px;
+    border-radius: 9999px;
+    background: #6415ff;
+    color: #fff;
+    line-height: 1.5;
+    border: none;
+    width: auto;
+    transition: all 300ms;
 }
 
 .header__customers--title {
-  margin-top: 80px;
-  color: #a0aec0;
-  font-size: 12px;
-  font-weight: 700;
-  letter-spacing: 0.6px;
+    margin-top: 80px;
+    color: #a0aec0;
+    font-size: 12px;
+    font-weight: 700;
+    letter-spacing: 0.6px;
+}
+
+.header__customers {
+    display: flex;
+    margin-top: 16px;
+    padding-right: 64px;
+    opacity: 0.5;
+    width: 400px;
+}
+
+.header__img--wrapper {
+    width: calc(100% -  40%);
+}
+
+.header__img {
+    width: 100%;
+    max-width: 768px;
+    margin-left: 10px;
+}
+
+/* FEATURES */
+
+#features {
+padding: 0 32px;
+}
+
+.row__narrow {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 8px;
+}
+
+.features__title {
+    font-size: 16px;
+    color: #6415ff;
+    letter-spacing: 1.6px;
+    font-weight: 700;
+}
+
+.features__subtitle {
+    font-size: 60px;
+}
+
+.features__para {
+    max-width: 800px;
+    text-align: center;
+    font-size: 18px;
+    font-weight: 500;
+    color: #7c8ba1;
+    line-height: 1.625;
+}
+
+.features {
+    margin-top: 40px;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.feature {
+    text-align: center;
+    width: calc(100% / 3);
+}
+
+.feature__row {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 32px;
+}
+
+.feature__para {
+    margin-top: 16px;
+    font-size: 16px;
+    max-width: calc(634px / 3);
+    color: rgb(124, 139, 161);
+    line-height: 2;
+    font-weight: 500;
 }
