--- a/style.css
+++ b/style.css
@@ -374,7 +374,66 @@ padding: 0 32px;
 
 /* VALUES */
 
+#values .section__para {
+    text-align: left;
+    width: 80%;
+}
+
+#values .section__subtitle {
+width: 75%;
+}
+
+.value {
+    margin: 32px 32px 0 0;
+}
+
 .value__img {
     width: 37px;
     height: 37px;
+}
+
+.value__title {
+    display: flex;
+}
+
+.values__list {
+    display: flex;
+}
+
+.values__btn {
+    margin: 0;
+    padding: 10px 32px;
+    margin-top: 15px;
+    border-radius: 9999px;
+    background: #6415ff;
+    color: #fff;
+    line-height: 1.5;
+    border: none;
+    width: auto;
+}
+
+.values__img {
+    width: 100%;
+}
+
+.value__name {
+    margin-left: 12px;
+    font-size: 20px;
+    font-weight: bold;
+    color: #243e63;
+    
+}
+
+.value__para {
+    margin-top: 12px;
+    line-height: 1.625;
+    color: #718096;
+}
+
+/* PRICING */
+
+#pricing .row {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
