--- a/style.css
+++ b/style.css
@@ -23,417 +23,454 @@ body {
 }
 
 button {
-    cursor: pointer;
-    border: none;
+  cursor: pointer;
+  border: none;
 }
 
 .purple {
-    color: #6415ff;
+  color: #6415ff;
 }
 
 .container {
-    padding: 96px 0;
+  padding: 96px 0;
 }
 
 .row {
-    width: 100%;
-    max-width: 1280px;
-    margin: 0 auto;
-    display: flex;
+  width: 100%;
+  max-width: 1280px;
+  margin: 0 auto;
+  display: flex;
 }
 
 .row__narrow {
-    width: 100%;
-    max-width: 1024px;
-    margin: 0 auto;
+  width: 100%;
+  max-width: 1024px;
+  margin: 0 auto;
 }
 
 .section__title {
-    font-size: 16px;
-    color: #6415ff;
-    letter-spacing: 1.6px;
-    font-weight: 700;
+  font-size: 16px;
+  color: #6415ff;
+  letter-spacing: 1.6px;
+  font-weight: 700;
 }
 
 .section__subtitle {
-    font-size: 48px;
-    margin: 16px 0;
-    font-weight: 900;
+  font-size: 48px;
+  margin: 16px 0;
+  font-weight: 900;
 }
 
 .section__para {
-    max-width: 700px;
-    text-align: center;
-    font-size: 18px;
-    font-weight: 500;
-    color: #7c8ba1;
-    line-height: 1.625;
+  max-width: 700px;
+  text-align: center;
+  font-size: 18px;
+  font-weight: 500;
+  color: #7c8ba1;
+  line-height: 1.625;
 }
 
- /* NAV BAR */
+/* NAV BAR */
 
- nav {
-    display: flex;
-    padding-top: 32px;
+nav {
+  display: flex;
+  padding-top: 32px;
 }
 
 .nav__row {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 
 .nav__links {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 .nav__link {
-    margin: 0 24px;
+  margin: 0 24px;
 }
 
 .nav__link {
-    font-size: 14px;
-    font-weight: 600;
-    padding-top: 4px;
-    letter-spacing: 0.35px; 
-    border-bottom: 2px solid transparent;
-    position: relative;
-    transition: all 300ms;
+  font-size: 14px;
+  font-weight: 600;
+  padding-top: 4px;
+  letter-spacing: 0.35px;
+  border-bottom: 2px solid transparent;
+  position: relative;
+  transition: all 300ms;
 }
 
 .nav__link:hover {
-    color: #6415ff;
+  color: #6415ff;
 }
 
 .nav__link--primary {
-    margin: 0;
-    padding: 10px 32px;
-    margin-top: 2px;
-    border-radius: 100px;
-    background: #6415ff;
-    color: #fff;
-    line-height: 1.5;
-    border: none;
-    width: auto;
-    transition: all 300ms;
+  margin: 0;
+  padding: 10px 32px;
+  margin-top: 2px;
+  border-radius: 100px;
+  background: #6415ff;
+  color: #fff;
+  line-height: 1.5;
+  border: none;
+  width: auto;
+  transition: all 300ms;
 }
 
-
 .nav__link--primary:hover {
-    background-color: rgba(80,17,204);
+  background-color: rgba(80, 17, 204);
 }
 
 .login {
-    margin-left: 48px;
+  margin-left: 48px;
 }
 
 .nav__logo {
-    display: flex;
-    align-items: center;
-    margin: 8px 0;
-    padding-bottom: 4px;
+  display: flex;
+  align-items: center;
+  margin: 8px 0;
+  padding-bottom: 4px;
 }
 
 .nav__logo--img {
-    width: 40px;
-    height: 40px;
+  width: 40px;
+  height: 40px;
 }
 
 .nav__logo--title {
-    font-size: 24px;
-    font-weight: 900;
-    margin-left: 12px;
-    letter-spacing: 0.6px;
-    padding-bottom: 2px;
+  font-size: 24px;
+  font-weight: 900;
+  margin-left: 12px;
+  letter-spacing: 0.6px;
+  padding-bottom: 2px;
 }
 
 /* HEADER */
 
 h1 {
-    font-size: 48px;
-    color: #1a202c;
-    line-height: 1.25;
-    text-align: start;
+  font-size: 48px;
+  color: #1a202c;
+  line-height: 1.25;
+  text-align: start;
 }
 
 .header__description {
-    width: 40%;
-
+  width: 40%;
 }
 
 .header__description--para {
-    margin: 32px 0;
-    font-size: 18px;
+  margin: 32px 0;
+  font-size: 18px;
 }
 
 .header__email {
-    width: 100%;
-    border: none;
-    border-radius:30px;
+  width: 100%;
+  border: none;
+  border-radius: 30px;
 }
 
 .header__email--btn {
-    margin: 0;
-    padding: 10px 32px;
-    margin-top: 2px;
-    border-radius: 9999px;
-    background: #6415ff;
-    color: #fff;
-    line-height: 1.5;
-    border: none;
-    width: auto;
-    transition: all 300ms;
+  margin: 0;
+  padding: 10px 32px;
+  margin-top: 2px;
+  border-radius: 9999px;
+  background: #6415ff;
+  color: #fff;
+  line-height: 1.5;
+  border: none;
+  width: auto;
+  transition: all 300ms;
 }
 
 .header__customers--title {
-    margin-top: 80px;
-    color: #a0aec0;
-    font-size: 12px;
-    font-weight: 700;
-    letter-spacing: 0.6px;
+  margin-top: 80px;
+  color: #a0aec0;
+  font-size: 12px;
+  font-weight: 700;
+  letter-spacing: 0.6px;
 }
 
 .header__customers {
-    display: flex;
-    margin-top: 16px;
-    padding-right: 64px;
-    opacity: 0.5;
-    width: 400px;
+  display: flex;
+  margin-top: 16px;
+  padding-right: 64px;
+  opacity: 0.5;
+  width: 400px;
 }
 
 .header__img--wrapper {
-    width: calc(100% -  40%);
+  width: calc(100% - 40%);
 }
 
 .header__img {
-    width: 100%;
-    max-width: 768px;
-    margin-left: 10px;
+  width: 100%;
+  max-width: 768px;
+  margin-left: 10px;
 }
 
 /* FEATURES */
 
 #features {
-padding: 0 32px;
+  padding: 0 32px;
 }
 
 .row__narrow {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 8px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 8px;
 }
 
 .features {
-    margin-top: 40px;
-    display: flex;
-    flex-wrap: wrap;
+  margin-top: 40px;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .feature {
-    width: calc(100% / 3);
+  width: calc(100% / 3);
 }
 
 .feature__row {
-    display: flex;
-    align-items: flex-start;
-    flex-wrap: wrap;
-    padding: 32px 24px;
-
+  display: flex;
+  align-items: flex-start;
+  flex-wrap: wrap;
+  padding: 32px 24px;
 }
 
 .feature__title {
-    display: flex;
-    font-size: 24px;
-    padding: 16px;
+  display: flex;
+  font-size: 24px;
+  padding: 16px;
 }
 
 .feature__para {
-    margin-top: 12px;
-    font-size: 16px;
-    max-width: calc(634px / 3);
-    color: rgb(124, 139, 161);
-    line-height: 2;
-    font-weight: 500;
+  margin-top: 12px;
+  font-size: 16px;
+  max-width: calc(634px / 3);
+  color: rgb(124, 139, 161);
+  line-height: 2;
+  font-weight: 500;
 }
 
 .feature__img--wrapper {
-    display: flex;
-    padding: 20px;
-    border: 1px solid lightgray;
-    border-radius: 500px;
+  display: flex;
+  padding: 20px;
+  border: 1px solid lightgray;
+  border-radius: 500px;
 }
 
 .feature__img {
-    height: 24px;
-    width: 24px;
+  height: 24px;
+  width: 24px;
 }
 
 /* QUALITY WORK */
 
 #quality .row {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .quality__title {
-    font-size: 16px;
-    color: #6415ff;
-    letter-spacing: 1.6px;
-    font-weight: 700;
-    margin-bottom: 20px;
+  font-size: 16px;
+  color: #6415ff;
+  letter-spacing: 1.6px;
+  font-weight: 700;
+  margin-bottom: 20px;
 }
 
 .quality__subtitle {
-    font-size: 48px;
-    font-weight: 900;
-    color: rgb(36, 62, 99);
-    line-height: 1.5;
-    margin: 16px 0;
+  font-size: 48px;
+  font-weight: 900;
+  color: rgb(36, 62, 99);
+  line-height: 1.5;
+  margin: 16px 0;
 }
 
 .quality__para {
-    max-width: 700px;
-    text-align: left;
-    font-size: 18px;
-    font-weight: 500;
-    color: #7c8ba1;
-    line-height: 1.625;
-    margin-bottom: 10px;
+  max-width: 700px;
+  text-align: left;
+  font-size: 18px;
+  font-weight: 500;
+  color: #7c8ba1;
+  line-height: 1.625;
+  margin-bottom: 10px;
 }
 
 .quality__btn {
-    margin: 0;
-    padding: 10px 32px;
-    margin-top: 15px;
-    border-radius: 9999px;
-    background: #6415ff;
-    color: #fff;
-    line-height: 1.5;
-    border: none;
-    width: auto;
-    transition: all 300ms;
+  margin: 0;
+  padding: 10px 32px;
+  margin-top: 15px;
+  border-radius: 9999px;
+  background: #6415ff;
+  color: #fff;
+  line-height: 1.5;
+  border: none;
+  width: auto;
+  transition: all 300ms;
 }
 
 .quality__img {
-    width: 100%;
-    padding: 48px;
+  width: 100%;
+  padding: 48px;
 }
 
 /* STEPS */
 
 .steps__description {
-    padding: 32px 0;
-    padding-left: 64px;
+  padding: 32px 0;
+  padding-left: 64px;
 }
 
 .step {
-    display: flex;
-    align-items: flex-start;
-    margin-top: 32px;
+  display: flex;
+  align-items: flex-start;
+  margin-top: 32px;
 }
 
 .steps__title {
-    font-weight: 600;
-    font-size: 20px;
-    color: #243e63;
-    line-height: 1;
+  font-weight: 600;
+  font-size: 20px;
+  color: #243e63;
+  line-height: 1;
 }
 
 .steps__subtitle {
-    font-size: 48px;
-    font-weight: 900;
-    color: rgb(36, 62, 99);
-    line-height: 1.5;
-    margin: 16px 0;
+  font-size: 48px;
+  font-weight: 900;
+  color: rgb(36, 62, 99);
+  line-height: 1.5;
+  margin: 16px 0;
 }
 
 .step__number {
-    color: #cbd5e0;
-    font-size: 36px;
-    font-weight: 600;
-    line-height: 1;
-    margin-right: 32px;
+  color: #cbd5e0;
+  font-size: 36px;
+  font-weight: 600;
+  line-height: 1;
+  margin-right: 32px;
 }
 
 .step__title {
-    font-weight: 600;
-    font-size: 20px;
-    color: #243e63;
-    line-height: 1;
+  font-weight: 600;
+  font-size: 20px;
+  color: #243e63;
+  line-height: 1;
 }
 
 .step__para {
-    font-size: 14px;
-    color: #718096;
-    margin-top: 12px;
-    font-weight: 500;
-    line-height: 2;
+  font-size: 14px;
+  color: #718096;
+  margin-top: 12px;
+  font-weight: 500;
+  line-height: 2;
 }
 
 /* VALUES */
 
 #values .section__para {
-    text-align: left;
-    width: 80%;
+  text-align: left;
+  width: 80%;
 }
 
 #values .section__subtitle {
-width: 75%;
+  width: 75%;
 }
 
 .value {
-    margin: 32px 32px 0 0;
+  margin: 32px 32px 0 0;
 }
 
 .value__img {
-    width: 37px;
-    height: 37px;
+  width: 37px;
+  height: 37px;
 }
 
 .value__title {
-    display: flex;
+  display: flex;
 }
 
 .values__list {
-    display: flex;
+  display: flex;
 }
 
 .values__btn {
-    margin: 0;
-    padding: 10px 32px;
-    margin-top: 15px;
-    border-radius: 9999px;
-    background: #6415ff;
-    color: #fff;
-    line-height: 1.5;
-    border: none;
-    width: auto;
+  margin: 0;
+  padding: 10px 32px;
+  margin-top: 15px;
+  border-radius: 9999px;
+  background: #6415ff;
+  color: #fff;
+  line-height: 1.5;
+  border: none;
+  width: auto;
 }
 
 .values__img {
-    width: 100%;
+  width: 100%;
 }
 
 .value__name {
-    margin-left: 12px;
-    font-size: 20px;
-    font-weight: bold;
-    color: #243e63;
-    
+  margin-left: 12px;
+  font-size: 20px;
+  font-weight: bold;
+  color: #243e63;
 }
 
 .value__para {
-    margin-top: 12px;
-    line-height: 1.625;
-    color: #718096;
+  margin-top: 12px;
+  line-height: 1.625;
+  color: #718096;
 }
 
 /* PRICING */
 
 #pricing .row {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#pricing .section__para {
+    margin-bottom: 60px;
+}
+
+.plans {
+  display: flex;
+  justify-content: space-between;
+  text-align: center;
+  width: 100%;
+}
+
+.plan__top,
+.plan__middle,
+.plan__bottom {
+  padding: 32px;
+  border: 1.5px solid lightgray;
+  border-radius: 5px;
+}
+
+.plan__button {
+  color: #f7fafc;
+  background: linear-gradient(
+    115deg,
+    rgb(56, 178, 172) 0%,
+    rgb(129, 230, 217) 100%
+  );
+
+  text-transform: uppercase;
+  text-align: center;
+  padding: 16px 32px;
+  border-radius: 500px;
+  border: none;
+  font-size: 14px;
+  width: 100%;
+  max-width: 192px;
+  font-weight: bold;
+  letter-spacing: 0.05em;
+  line-height: 1.5;
+  transition: all 300ms;
 }
