--- a/style.css
+++ b/style.css
@@ -469,7 +469,7 @@ h1 {
   padding: 32px;
   border: 1.5px solid rgb(230, 230, 230);
   border-radius: 7px;
-  }
+}
 
 .plan__name {
   font-size: 20px;
@@ -489,17 +489,17 @@ h1 {
 }
 
 .plan__target {
-    font-size: 20px;
-    font-weight: 700;
-    line-height: 1.5;
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 1.5;
 }
 
 .plan__feature {
-    margin-top: 16px;
-    font-weight: 500;
-    color: #718096e1;
-    font-size: 16px;
-    line-height: 1.5;
+  margin-top: 16px;
+  font-weight: 500;
+  color: #718096e1;
+  font-size: 16px;
+  line-height: 1.5;
 }
 
 .plan__button {
@@ -525,43 +525,47 @@ h1 {
 }
 
 .plan__button:hover {
-    transform: translate(1px, -1px);
-    box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px 0px, rgba(0, 0, 0, 0) 0px 0px 0px 0px, rgba(0, 0, 0, 0.1) 0px 20px 25px -5px, rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
+  transform: translate(1px, -1px);
+  box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px 0px, rgba(0, 0, 0, 0) 0px 0px 0px 0px,
+    rgba(0, 0, 0, 0.1) 0px 20px 25px -5px,
+    rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
 }
 
 .plan:nth-child(1) .plan__stripe,
 .plan:nth-child(1) .plan__button {
-    color: #f7fafc;
-    background: linear-gradient(115deg, rgb(56, 178, 172) 0%, rgb(129, 230, 217) 100%);
+  color: #f7fafc;
+  background: linear-gradient(
+    115deg,
+    rgb(56, 178, 172) 0%,
+    rgb(129, 230, 217) 100%
+  );
 }
 
 .plan:nth-child(2) {
-    background: linear-gradient(135deg, rgb(76, 81, 191) 0%, rgb(102, 126, 234) 100%);
+  background: linear-gradient(
+    135deg,
+    rgb(76, 81, 191) 0%,
+    rgb(102, 126, 234) 100%
+  );
 }
 
 .plan:nth-child(2) .plan__button {
-    color: #6415ff;
-    background-color: #f7fafc;
+  color: #6415ff;
+  background-color: #f7fafc;
 }
 
 .plan:nth-child(2) .plan__stripe {
-    visibility: hidden;
+  visibility: hidden;
 }
 
 .plan:nth-child(3) .plan__stripe,
 .plan:nth-child(3) .plan__button {
-    color: #f7fafc;
-    background: linear-gradient(115deg, rgb(245, 101, 101) 0%, rgb(254, 178, 178) 100%);
-}
-
-.plan:nth-child(odd) .plan__name,
-.plan:nth-child(odd) .plan__price,
-.plan:nth-child(odd) .plan__target {
-    color: #1a202c;
-}
-
-.plan:nth-child(odd) .plan__duration {
-    color: #a0aec0;
+  color: #f7fafc;
+  background: linear-gradient(
+    115deg,
+    rgb(245, 101, 101) 0%,
+    rgb(254, 178, 178) 100%
+  );
 }
 
 .plan:nth-child(2) .plan__name,
@@ -569,24 +573,14 @@ h1 {
 .plan:nth-child(2) .plan__target,
 .plan:nth-child(2) .plan__duration,
 .plan:nth-child(2) .plan__feature {
-    color: #f7fafc;
-}
-
-.plan:nth-child(1) .plan__middle,
-.plan:nth-child(3   ) .plan__middle {
-    border-top: 2px solid rgb(229, 231, 235);
-    border-bottom: 2px solid rgb(229, 231, 235);
-}
-
-.plan:nth-child(2) .plan__middle {
-    border-top: 2px solid rgb(102, 126, 234);
-    border-bottom: 2px solid rgb(102, 126, 234);
+  color: #f7fafc;
 }
 
 /* TESTIMONIALS */
 
 #testimonials .section__para {
   text-align: left;
+  margin-bottom: 30px;
 }
 
 .testimonial__img {
@@ -601,4 +595,19 @@ h1 {
 
 i {
   color: rgba(246, 173, 85);
+  margin-bottom: 16px;
+}
+
+.testimonial__title {
+  font-weight: 700;
+  color: #243e63;
+  font-size: 20px;
+  margin-bottom: 16px;
+}
+
+.testimonial__para {
+      color: #4a5568;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.625;
 }
